# accounts-app

./: .gitignore  .gitmodules  update-mobile-chema.sh
.github/workflows/: build-and-push-accounts-api.yml  docker-image.yml  mobile-run-unit-tests.yml
accounts-api/: .gitignore  CMakeLists.txt  Dockerfile  Makefile.example  Readme.md  api-doc.json  api-doc.yaml  app-build.sh.example  app-run.sh.example  build.sh  preinit.sh  run-app.sh
accounts-api/src/accounts/: main.cpp
accounts-api/src/accounts/accounts/: accounts.handlers.cpp  accounts.handlers.hpp  accounts.models.hpp  accounts.repository.cpp  accounts.repository.hpp
accounts-api/src/accounts/auth/: auth.handlers.cpp  auth.handlers.hpp  auth.models.hpp  auth.service.cpp  auth.service.hpp  auth.utils.cpp  auth.utils.hpp
accounts-api/src/accounts/geoCode/: geoCode.handlers.cpp  geoCode.handlers.hpp
accounts-api/src/accounts/services/: appDependencies.cpp  appDependencies.hpp  geoLocReverse.service.cpp  geoLocReverse.service.hpp  googleLogin.service.cpp  googleLogin.service.hpp  jwt.service.cpp  jwt.service.hpp  mongoAccess.cpp  mongoAccess.hpp  sendHttpsRequest.hpp
accounts-api/src/accounts/shared/: env.cpp  env.hpp  models.hpp  types.hpp
accounts-api/src/accounts/users/: users.handlers.cpp  users.handlers.hpp  users.repository.cpp  users.repository.hpp
accounts-api/src/accounts/utils/: date.cpp  date.hpp  enumHelpers.hpp  enumToString.hpp  error.cpp  error.hpp  jsonSerialize.cpp  jsonSerialize.hpp  mongoDocument.hpp  objectMapper.hpp  readRequestJson.hpp  userId.hpp
backend/: .env.example  .gitignore  CMakeLists.txt  GNUmakefile  Makefile  Readme.md  go.mod  go.sum
backend/auth/: auth.controller.go  auth.models.db.go  auth.models.dto.go  auth.services.go  auth.services_test.go  auth.services_test.mock.go  auth.user-session.repository.go  controller.go  db-models.go  dto-models.go  handlers.go  repository.go  router.go  services.go  services_test.go
backend/cmd/: app.go  main.go
backend/constants/: app-keys.go
backend/database/: connect.go
backend/database/database-migrate/: database-migrate.go
backend/docs/: docs.go  swagger.json  swagger.yaml
backend/expenses/: expenses.controller.go  expenses.db-models.go  expenses.dto-models.go  expenses.repository.go  expenses.services.go
backend/handlers/: auth.go
backend/helpers/: app.go  requestId.go  response.go
backend/models/: user.go
backend/router/: router.go
backend/shared/google/: get-current-user.go
backend/src/: App.cpp
backend/user/: controller.go  db-models.go  services.go  services_test.go  user-repository.go  user.controller.go  user.models.db.go  user.models.dto.go  user.repository.go  user.services.go  user.services_test.go  user.services_test.mock.go
deployment/accounts-api/: .env.example  accounts-api.deployment  deployment.accounts-api.yaml  deployment.accounts-db.yaml  kustomization.yaml  mongo.deployment  rbac  roleBinding  serviceAccount  serviceAccount.yaml  setServiceAccountToken.sh
deployment/backend/stage/: config-map.yaml  createServiceAccountToken.sh  getServiceAccountToken.sh  mongo.deployment.yaml  namespace.yaml  rbac.yaml  role.yaml  roleBinding.yaml  serviceAccount.yaml
expenso-api/: .gitignore  CMakeLists.txt  Dockerfile  ExpensoApp  Readme.md  preinit.sh
expenso-api/src/: main.cpp
expenso-api/src/accounts/: accounts.handlers.cpp  accounts.handlers.hpp  accounts.models.hpp  accounts.repository.cpp  accounts.repository.hpp  main.cpp
expenso-api/src/accounts/auth/: auth.models.hpp  auth.service.cpp
expenso-api/src/accounts/services/: jwt.service.cpp  jwt.service.hpp  models.service.hpp  mongoAccess.hpp
expenso-api/src/accounts/shared/: models.hpp
expenso-api/src/accounts/users/: users.handlers.hpp  users.models.hpp  users.repository.cpp  users.repository.hpp
expenso-api/src/accounts/utils/: error.cpp  error.hpp  jsonSerialize.cpp  jsonSerialize.hpp  mongoDocument.hpp
expenso-api/src/auth/: auth.handlers.cpp  auth.handlers.hpp  auth.models.hpp  auth.service.cpp  auth.service.hpp  auth.utils.cpp  auth.utils.hpp  user.hpp
expenso-api/src/database/: db.cpp  db.hpp
expenso-api/src/services/: app-dependencies.cpp  app-dependencies.hpp  appDependencies.cpp  appDependencies.hpp  get-current-user.cpp  get-current-user.hpp  google-login.service.cpp  google-login.service.hpp  googleLogin.service.cpp  jwt.service.cpp  jwt.service.hpp  models.service.hpp  mongo-access.cpp  mongo-access.hpp  mongoAccess.cpp  mongoAccess.hpp
expenso-api/src/shared/: models.hpp  types.hpp
expenso-api/src/user/: user.models.hpp  user.repository.cpp  user.repository.hpp
expenso-api/src/users/: users.handlers.cpp  users.handlers.hpp  users.models.hpp  users.repository.cpp  users.repository.hpp  users.utils.cpp  users.utils.hpp
expenso-api/src/utils/: date.cpp  date.hpp  enumToString.hpp  error.cpp  error.hpp  jsonSerialize.cpp  jsonSerialize.hpp  mongoDocument.hpp  read-request-json.cpp  read-request-json.hpp  readRequestJson.hpp
mobile/: .env.example  .eslintrc.js  .gitignore  .prettierrc.json  App.tsx  Readme.md  app-tailwind.config.ts  app.config.ts  app.json  babel.config.js  bun.lockb  jest.config.js  metro.config.js  open-api-config.yaml  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json
mobile/android/app/: build.gradle
mobile/ios/: Podfile
mobile/ios/mobile/: Info.plist
mobile/ios/mobile.xcodeproj/: project.pbxproj
mobile/modules/ml-kit-wrapper/: expo-module.config.json  index.ts
mobile/src/: app.d.ts  testSetup.ts
mobile/src/app/: _layout.tsx  index.tsx  login.ts
mobile/src/constants/: google-auth.ts  routes.ts
mobile/src/hooks/: useGoogleSsoAuth.ts
mobile/src/lib/: api-schema.ts
mobile/src/navigation/: LoginNavigator.tsx  NavigationContainer.tsx
mobile/src/navigations/: AppNavigationContainer.hooks.tsx  AppNavigationContainer.test.tsx  AppNavigationContainer.tsx  AppNavigationProvider.tsx  BottomTabNavigator.tsx  LoginNavigator.tsx  NavigationContainer.tsx  index.ts
mobile/src/ui/: color-spec.ts  hooks.ts  index.ts
(+181 files in other folders)
